CHANGES
*******

0.8 (unreleased)
================

- One test did not work correctly in Python 3. Fixed.

0.7 (2014-11-03)
================

- **Breaking change**. There has been a change the way the mount
  directive works. There has also been a change in the way linking
  between application works. The changes result into a simpler, more
  powerful API and implementation.

  The relevant changes are:

  * You can now define your own custom ``__init__`` for
    ``morepath.App`` subclasses. Here you can specify the arguments
    with which your application object should be mounted. The previous
    ``variables`` class attribute is now ignored.

    It's not necessary to use ``super()`` when you subclass from
    ``morepath.App`` directly.

    So, instead of this::

       class MyApp(morepath.App):
           variables = ['mount_id']

    You should now write this::

       class MyApp(morepath.App):
           def __init__(self, mount_id):
               self.mount_id = mount_id

  * The ``mount`` directive should now return an *instance* of the
    application being mounted, not a dictionary with mount
    parameters. The application is specified using the ``app``
    argument to the directive. So instead of this::

      @RootApp.mount(app=MyApp, path='sub/{id}')
      def mount_sub(id):
          return {
             'mount_id': id
          }

    You should now use this::

      @RootApp.mount(app=MyApp, path='sub/{id}')
      def mount_sub(id):
          return MyApp(mount_id=id)

  * The ``mount`` directive now takes a ``variables`` argument. This
    works like the ``variables`` argument to the ``path``
    directive and is used to construct links.

    It is given an instance of the app being mounted, and it should
    reconstruct those variables needed in its path as a dictionary. If
    omitted, Morepath tries to get them as attributes from the
    application instance, just like it tries to get attributes of any
    model instance.
